--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
+    "request": "^2.80.0",
+    "request-promise": "^4.1.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
