--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
-    "clarifai": "^2.1.3-dev",
+    "clarifai": "^2.2.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
